fix home layout problems

--- a/client/src/pages/home/Home.css
+++ b/client/src/pages/home/Home.css
@@ -4,22 +4,24 @@
     box-sizing: border-box;
     font-family: "Jost", sans-serif;
 }
-
+.home-content {
+    display: grid;
+    grid-template-rows: 1.1fr 1fr 0.5fr 4.4fr;
+    justify-items: center;
+}
 .main-heading {
     background-color: #ffcd55;
     text-align: center;
     width: 90%;
-    margin-top: 1%;
-    margin-left: 5%;
-    display: grid;
-    place-items: center;
 }
 
 .posts-heading {
-    margin-top: 5em;
     text-align: center;
 }
-
+.post-content {
+    display: grid;
+    justify-items: center;
+}
 .post {
     color: white;
     font-weight: 1.1rem;
@@ -28,7 +30,6 @@
     text-align: center;
     width: 80%;
     height: 10em;
-    margin-left: 10%;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
